--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".end # False"
+    "\"art.vandelay@vandelay.co\".endswith('.com') # False"
    ]
   },
   {
