Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,11 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art.vandelay@vandelay.co\".endswith('.com') # False"
    ]
@@ -259,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'www.' 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
