Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,14 +261,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'www.' 'vandelay.com' # 'www.vandelay.com'"
+    "'www.' + 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
