Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,13 +297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553334"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "int()\"7285553334\") # 7285553335"
+    "int(\"7285553334\") # 7285553335"
    ]
   },
   {
